--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">CoursesApp</string>
+    <string name="password">Пароль</string>
+    <string name="enter_password">Введите пароль</string>
+    <string name="enter">Вход</string>
+    <string name="no_account">Нету аккаунта?</string>
+    <string name="registration">" Регистрация"</string>
+    <string name="forgot_password">"Забыл пароль"</string>
+    <string name="email">Email</string>
 </resources>
